# django4

./: .flake8  .gitignore  .pylintrc  pyproject.toml
sitewomen/: settings.py  urls.py
templates/: base.html
women/: urls.py  views.py
women/templates/women/: index.html
women/templates/women/includes/: nav.html
